--- a/UI/PrisonersDilemmaUI/package.json
+++ b/UI/PrisonersDilemmaUI/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "hammerjs": "^2.0.8",
+    "igniteui-angular-core": "^8.2.12",
+    "igniteui-angular-gauges": "^8.2.12",
     "ngx-json-viewer": "^2.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
